--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,52 @@
 # ====================================
 hs_err_pid*
 replay_pid*
+
+# ====================================
+# IDEs y editores
+# Ignora en cualquier subcarpeta
+# ====================================
+
+# VS Code
+**/.vscode/
+
+# IntelliJ IDEA
+**/.idea/
+*.iml
+out/
+
+# Eclipse
+**/.project
+**/.classpath
+**/.settings/
+bin/
+
+# NetBeans
+**/nbproject/private/
+**/build/
+**/nbbuild/
+**/dist/
+**/nbdist/
+**/.nb-gradle/
+
+# ====================================
+# Herramientas de build
+# ====================================
+
+# Gradle
+**/.gradle/
+**/build/
+
+# Maven
+**/target/
+
+# ====================================
+# Archivos del sistema operativo
+# ====================================
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+Desktop.ini
